fix(web): fix avatar overflow;

--- a/apps/actor-web/app/styles/app.scss
+++ b/apps/actor-web/app/styles/app.scss
@@ -140,6 +140,7 @@ md-list-item {
   position: relative;
   line-height: 0;
   img {
+    border-radius: 100%;
     position: absolute;
     left: 0;
     top: 0;
